worked on handlebars

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,8 +1,9 @@
-<button id="sign-up">signup</button>
+
 
 <div class="modal-container" id="modal-container">
   <div class="modal">
-    <form class="signup-form">
+    <form class="signup-form">]
+      <button id="sign-up">signup</button>
       <div>
         <label for="username-signup">Username:</label>
         <input type="text" id="username-signup" />
@@ -17,6 +18,7 @@
       </div>
       <div>
         <button type="submit">Signup</button>
+        <a href="/views/login.handlebars">Login!</a>
       </div>
     </form>
   </div>
